fix slow scroll on mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -544,6 +544,7 @@ nav {
 .menu-wrapper {
   overflow: auto;
   position: fixed;
+  -webkit-overflow-scrolling: touch;
   top: 0;
   bottom: 0;
   width: 100%;
@@ -1341,6 +1342,7 @@ footer {
     //min-height: 450px;
     overflow-x: scroll;
     overflow-y: hidden;
+    -webkit-overflow-scrolling: touch;
     display: flex;
     align-items: center;
 
